--- a/m-index.html
+++ b/m-index.html
@@ -22,11 +22,11 @@
           <div class="row">
             <div class="col-5 d-none d-md-block"></div>
             <div class="col-12 col-md-7">
-              <h4 class="title_modal my-5 text-center">Записатся на услугу</h4>
+              <h4 class="title_modal my-5 text-center">Записаться на услугу</h4>
               <form action="" class="d-flex flex-column align-items-center">
                 <input type="text" class="my-3" placeholder="Представтесь">
                 <input type="tel" class="my-3" placeholder="+7(___) ___ __ __">
-                <button type="submit" class="btn my-3">Записатся</button>
+                <button type="submit" class="btn my-3">Записаться</button>
               </form>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 «Foamy euphoria»</span> где ты сможешь познакомиться
                 с заведением, девушками и убедиться что мы
                 лучшие! Звони быстрее</p>
-              <button class="btn mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+              <button class="btn mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
             </div>
           </div>
         </div>
@@ -118,9 +118,9 @@
           <div class="d-flex align-items-center">
             <p class="text-green mr-3">Возраст</p> <p class="title title_medium" id="age">20</p>
           </div>
-          <button class="btn mt-5 d-none d-md-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+          <button class="btn mt-5 d-none d-md-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
         </div>
-        <button class="btn-mobile_girl mt-5 d-block d-md-none" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+        <button class="btn-mobile_girl mt-5 d-block d-md-none" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
       </div>
       <!-- servise ------------------------------------->
       <div class="section servise" data-anchor="servise" id="services-mobile">
@@ -157,7 +157,7 @@
                       </div>
                     </div>
                 </div>
-                <button class="btn btn_green mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                <button class="btn btn_green mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
                         <p>C 1 девушкой/120минут</p>
                         <p><b>6 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -211,7 +211,7 @@
                         <p>C 1 девушкой/30минут</p>
                         <p><b>1 900 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -238,7 +238,7 @@
                         <p>C 1 девушкой/90минут</p>
                         <p><b>6 900 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -261,7 +261,7 @@
                         <p>C 1 девушкой/60минут</p>
                         <p><b>3 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -288,7 +288,7 @@
                         <p>C 1 девушкой/60минут</p>
                         <p><b>6 200 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -315,7 +315,7 @@
                         <p>C 2 девушками/120минут</p>
                         <p><b>11 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -347,7 +347,7 @@
                         <p>C 2 девушками/120минут</p>
                         <p><b>15 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -378,7 +378,7 @@
                         <p>C 1 девушкой/120минут</p>
                         <p><b>11 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -409,7 +409,7 @@
                         <p>C 1 девушкой/120минут</p>
                         <p><b>9 900 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -436,7 +436,7 @@
                         <p>C 1 девушкой/90минут</p>
                         <p><b>8 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                     </div>
                   </div>
                 </div>
@@ -461,7 +461,7 @@
                 <p class="text-green">Звоните по телефону:</p>
                 <h5>8 (927) 006-30-06</h5>
               </div>
-              <button class="btn d-none d-lg-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+              <button class="btn d-none d-lg-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
             </div>
             <div class="col-12 col-lg-6 mt-5">
               <div class="contact__info">
@@ -469,7 +469,7 @@
                   Вы ищите где расслабиться после
                   трудного дня в Самаре?
                 </h6>
-                <button class="btn d-block d-lg-none w-75 mx-auto" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+                <button class="btn d-block d-lg-none w-75 mx-auto" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
                 <p class="d-none d-lg-block">
                   Мужской спа-салон «Эмбарго» предложит
                   на выбор 10 качественных spa программ,
