--- a/m-index.html
+++ b/m-index.html
@@ -494,7 +494,7 @@
         </div>
       </div>
     </div>
-    <div class="ban position-fixed d-flex flex-wrap flex-xl-column justify-content-center">
+    <div class="ban position-fixed">
       <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3 mr-xl-0">
       <img src="img/warning/not-sex.png" alt="">
     </div>
