--- a/index.html
+++ b/index.html
@@ -17,15 +17,26 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-0">
-          <div class="row">
-            <div class="col-5 d-none d-md-block"></div>
-            <div class="col-12 col-md-7">
-              <h4 class="title_modal my-5 text-center">Записатся на услугу</h4>
-              <form action="" class="d-flex flex-column align-items-center">
-                <input type="text" class="my-3" placeholder="Представтесь">
-                <input type="tel" class="my-3" placeholder="+7(___) ___ __ __">
-                <button type="submit" class="btn my-3">Записатся</button>
-              </form>
+          <div class="welcome d-none">
+            <div class="row">
+              <div class="col-5 d-none d-md-block"></div>
+              <div class="col-12 col-md-7">
+                <h4 class="title_modal my-5 text-center">Записатся на услугу</h4>
+                <form action="" class="d-flex flex-column align-items-center">
+                  <input type="text" class="my-3" placeholder="Представтесь">
+                  <input type="tel" class="my-3" placeholder="+7(___) ___ __ __">
+                  <button type="submit" class="btn my-3">Записатся</button>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="thanks">
+            <div class="row">
+              <div class="col-12">
+                <h4 class="title_modal text-center">Добро пожаловать!</h4>
+                <h6 class="text-center">Ожидайте нашего звонка</h6>
+                <img src="img/modal/ok.svg" alt="">
+              </div>
             </div>
           </div>
         </div>
