--- a/shares.html
+++ b/shares.html
@@ -79,18 +79,37 @@
           <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
         </div>
       </nav>
-      <div class="section home" data-anchor="home" id="home-mobile">
-        <div class="home__inner">
+      <div class="section shares" data-anchor="home" id="home-mobile">
+        <div class="shares__inner">
           <div class="row w-100">
             <div class="col-12">
-              <h1 class="title title_big home__title">Мужской<br><span>Бар-SPA</span></h1>
-              <h2 class="home__discription text-green title title_medium mb-5">В центре Самары</h2>
-              <p>Будь первым! Запишись на <span class="text-green">ТЕСТ-ДРАЙВ-ШОУ
-                «Foamy euphoria»</span> где ты сможешь познакомиться
-                с заведением, девушками и убедиться что мы
-                лучшие! Звони быстрее</p>
-              <button class="btn mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+              <h1 class="title title_big home__title">Акции</h1>
             </div>
+          </div>
+          <div class="row w-100">
+              <div class="shares-slider">
+                <div class="shares-slider__slide">
+                    Merry Christmas Sale - скидка 2021₽ на все! <br>
+                    Беспроигрышная лотерея всю зиму!
+                    <div class="shares-slider__slide__footer mt-5">
+                        <button class="btn btn_none-style-btn text-green">Зписаться</button>
+                    </div>
+                </div>
+                <div class="shares-slider__slide">
+                    Merry Christmas Sale - скидка 2021₽ на все! <br>
+                    Беспроигрышная лотерея всю зиму!
+                    <div class="shares-slider__slide__footer mt-5">
+                        <button class="btn btn_none-style-btn text-green">Зписаться</button>
+                    </div>
+                </div>
+                <div class="shares-slider__slide">
+                    Merry Christmas Sale - скидка 2021₽ на все! <br>
+                    Беспроигрышная лотерея всю зиму!
+                    <div class="shares-slider__slide__footer mt-5">
+                        <button class="btn btn_none-style-btn text-green">Зписаться</button>
+                    </div>
+                </div>
+              </div>
           </div>
         </div>
       </div>
