--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
             <li class="nav-item text-center" data-menuanchor="contact">
               <a class="nav-link text-white" href="contact.html">Контакты</a>
             </li>
+            <li class="nav-item text-center" data-menuanchor="shares">
+              <a class="nav-link text-white" href="shares.html">Акции</a>
+            </li>
           </ul>
           <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
             <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
