--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
             <div class="col-12">
               <h1 class="title title_big home__title">Мужской<br><span>Бар-SPA</span></h1>
               <h2 class="home__discription text-green title title_medium mb-5">В центре Самары</h2>
-              <p>Будь первым! Запишись на <span class="text-green">ТЕСТ-ДРАЙВ-ШОУ
-                «Foamy euphoria»</span> где ты сможешь познакомиться
-                с заведением, девушками и убедиться что мы
-                лучшие! Звони быстрее</p>
+              <p>Merry Christmas Sale <span class="text-green">скидка 2021₽ на все! <br>
+                Беспроигрышная лотерея всю зиму!</p>
               <button class="btn mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
             </div>
           </div>
