--- a/m-index.html
+++ b/m-index.html
@@ -454,6 +454,61 @@
           </div>
         </div>
       </div>
+      <!-- shares ----------------------------------------->
+      <div class="section shares" data-anchor="home" id="home-mobile">
+        <div class="shares__inner">
+          <div class="row w-100">
+            <div class="col-12">
+              <h1 class="title title_big home__title mb-5">Акции</h1>
+            </div>
+          </div>
+          <div class="row w-100 justify-content-center mx-0">
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3>Будь <br> первым!</h3>
+                <p>Скидка 25% на первое посещение</p>
+                  <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
+            </div>
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3>Лучшие <br> друзья.</h3>
+                <p>Прийди в салон с друзьями, получи скидку 20% на общий чек.</p>
+                  <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
+            </div>
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3 class="mt-5">VIP-такси.</h3> 
+                <p>При заказе любой программы, за тобой приезжает дорогой автомобиль, в салоне которого будет ожидать соблазнительный водитель.</p>
+                  <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
+            </div>
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3 class="mt-5">Именинник?</h3>
+              Скидка равна возрасту!
+              <p>Действует на все программы от 6000 руб. 7 дней до 7 дней после дня рождения.</p>
+                <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
+            </div>
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3>Дым.</h3> 
+              <p>Приятный бонус за ожидание более 15 минут.</p>
+                <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
+            </div>
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3>Каждый <br> четверг</h3>
+              <p>тематическая вечеринка</p>
+                <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Прийти</button>
+            </div>
+            <div class="shares-slider__slide">
+                <img src="img/stock/img.png" alt="">
+                <h3>Каждый <br> вторник</h3> 
+              <p>скидка эксклюзив 30%</p>
+                <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
+            </div>
+          </div>
+          </div>
+        </div>
       <!-- contact ---------------------------------------->
       <div class="section contact" data-anchor="contact" id="contact-mobile">
         <div class="container">
@@ -502,62 +557,6 @@
           </div>
         </div>
       </div>
-      <div class="section shares" data-anchor="home" id="home-mobile">
-        <div class="shares__inner">
-          <div class="row w-100">
-            <div class="col-12">
-              <h1 class="title title_big home__title mb-5">Акции</h1>
-            </div>
-          </div>
-          <div class="row w-100">
-              <div class="shares-slider">
-                <div class="shares-slider__slide">
-                    <h3>Будь первым!</h3>
-                    <p>Скидка 25% на первое посещение</p>
-                      <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
-                </div>
-                <div class="shares-slider__slide">
-                    <h3>Лучшие друзья.</h3>
-                    <p>Прийди в салон с друзьями, получи скидку 20% на общий чек.</p>
-                      <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
-                </div>
-                <div class="shares-slider__slide">
-                    <h3>VIP-такси.</h3> 
-                    <p>При заказе любой программы, за тобой приезжает дорогой автомобиль, в салоне которого будет ожидать соблазнительный водитель.</p>
-                      <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
-                </div>
-                <div class="shares-slider__slide">
-                  <h3>Именинник?</h3>
-                  Скидка равна возрасту!
-                  <p>Действует на все программы от 6000 руб. 7 дней до 7 дней после дня рождения.</p>
-                    <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
-                </div>
-                <div class="shares-slider__slide">
-                  <h3>Дым.</h3> 
-                  <p>Приятный бонус за ожидание более 15 минут.</p>
-                    <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
-                </div>
-                <div class="shares-slider__slide">
-                  <h3>Каждый четверг</h3>
-                  <p>тематическая вечеринка</p>
-                    <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Прийти</button>
-                </div>
-                <div class="shares-slider__slide">
-                  <h3>Каждый вторник</h3> 
-                  <p>скидка эксклюзив 30%</p>
-                    <button class="btn btn_green" data-toggle="modal" data-target="#exampleModal">Получить скидку</button>
-                </div>
-              </div>
-              <div class="box-arrow-shares">
-                <button class="arrow-shares arrow-shares__prev">
-                  <img src="img/shares/slider/arrow.png" alt="">
-                </button>
-                <button class="arrow-shares arrow-shares__next">
-                  <img src="img/shares/slider/arrow.png" alt="">
-                </button>
-              </div>
-          </div>
-        </div>
       </div>
     </div>
     <div class="ban position-fixed">
