--- a/m-index.html
+++ b/m-index.html
@@ -100,8 +100,11 @@
             <div class="col-12">
               <h1 class="title title_big home__title">Мужской<br><span>Бар-SPA</span></h1>
               <h2 class="home__discription text-green title title_medium mb-5">В центре Самары</h2>
-              <p>Merry Christmas Sale <span class="text-green">скидка 2021₽ на все! <br>
-                Беспроигрышная лотерея всю зиму!</p>
+              <p>ВСЮ НЕДЕЛЮ ДАРИМ НА ВСЁ <span class="text-green"> 2300₽ КАЖДОМУ!!!</span><br><br>
+                В твоих руках неограниченная власть — распоряжайся ею правильно. Мы будем  полностью в твоем распоряжении, только отдай приказ <br><br>
+                <span class="text-green">Скидка на  все двухчасовые программы 23%</span><br><br>
+                акции действительны с 19.02 до 26.02
+              </p>
               <button class="btn mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записаться</button>
             </div>
           </div>
